# track-anything-annotate

./: .gitignore  BACKUP_REPOSITORIES.md  LICENSE  README.md  annotation.py  config.py  demo.py  download_models.py  interactive_video.py  pyproject.toml  req.txt  requirements.txt  sam_controller.py  segmenter.py  segmenter_fast.py  segmenter_test.py  tracker.py  tracker_core.py  tracker_core_test.py  tracker_core_xmem.py  tracker_core_xmem2.py  tracker_test.py
XMem/inference/data/: mask_mapper.py
XMem2/inference/: inference_core.py
XMem2/inference/data/: mask_mapper.py  video_reader.py
XMem2/model/: network.py
checkpoints/: download_models.py
models/: sam2.1_hiera_b+.yaml  sam2.1_hiera_l.yaml  sam2.1_hiera_s.yaml  sam2.1_hiera_t.yaml
tools/: STRUCTURE_DATASETS.md  checkframes.py  contour_detector.py  data_exporter.py  mask_display.py  mask_merge.py  overlay_image.py
