[project]
name = "track"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "gitpython>=3.1.44",
    "gradio>=5.25.0",
    "matplotlib==3.9.2",
    "opencv-python>=4.11.0.86",
    "progressbar2>=4.5.0",
    "psutil>=7.0.0",
    "sam-2",
    "setuptools>=78.1.0",
    "thinplate",
    "tqdm>=4.67.1",
]

# dependecies for sam2 if have problem with install https://github.com/facebookresearch/sam2.git
# "setuptools>=62.3.0,<75.9",  
# "torch>=2.6.0",

[tool.ruff]
exclude = ["XMem", "XMem2"]


[project.optional-dependencies]
cpu = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]
cu124 = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

# sam-2 = { git = "https://github.com/lnikioffic/sam2.git" }
thinplate = { git = "https://github.com/cheind/py-thin-plate-spline" }
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
